[metadata]
name = pySCS
author = Dave van Stein
author-email = dvanstein@xebia.com
license = MIT
version = 0.1
long_description = file: README.md
url = https://pypi.python.org/pypi/py-scs
requires-python = >=3
classifiers = 
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Security

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1


# TODO add dependencies
# graphviz
# pandas
# pyplot
# pypandoc
